# s2ibispy

./: .gitignore  CHANGELOG.md  README.md  buffer.s2i  buffer_ja.ibs  buffer_py.ibs  compare_driver.sp  compare_driver.tr0  correlation.py  defaults.yaml  demo_real_hspice.py  flat_to_subckt.py  gui.py  gui_main.py  inv_s2i.ibs  isso_test_1.lis  loader.py  main.py  models.py  parse_netlist.py  parser.py  pyproject.toml  requirements.txt  s2i_constants.py  s2i_to_yaml.py  s2ianaly.py  s2ibispy.spec  s2ibispy_gui.py  s2ioutput.py  s2ispice.py  s2iutil.py  schema.py  test.sp  test.st0  test_load.yaml  test_s2ibis3.py  test_tr0_reader.py  test_yaml_tab.py  yaml_editor.py  yaml_editor_config.py  (+1 more)
bk/: parserbk.py  s2iouput_bk.py  s2ispicebk.py  test_constants.py  test_models.py  test_output.py  test_parser.py  test_s2ianaly.py  test_spice.py  test_spicebk.py  test_util.py
buffer_sp_files/: README.md  buffer.s2i  diff_driver.sp  io_buf_s.sp  test.sp  test_io_buf.sp
docs/: BEFORE_AFTER_COMPARISON.md  CORRELATION_ROADMAP.md  REFACTORING_NOTES.md  RESOLUTION_COMPARISON.md  SPICE_DECK_PARITY.md  YAML_EDITOR_INTEGRATION.md  YAML_EDITOR_REFERENCE.md  YAML_VS_S2I.md  s2ibispy contributor guide.md
gui/: README.md  __init__.py  app.py
legacy/: loader.py  models.py  parser.py  s2ianaly.py  s2ioutput.py  s2ispice.py  s2iutil.py  schema.py
plotter/: ibis_overlay_plotter.py  ibis_overlay_plotter_gui.py  ibis_plotter.py
templates/: compare_correlation.sp.j2
tests/: buffer.s2i  buffer.sp  buffer.yaml  ex2.s2i  ex3.ibs  ex3.s2i  ex4.s2i  fake.py  io_buf.yaml  io_buf_t2b_eqv.yaml  (+14 more)
(+2087 files in other folders)
