[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "s2ibispy"
version = "1.0.0"
description = "SPICE to IBIS Converter (s2ibis3 replacement)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourname/s2ibispy"
Repository = "https://github.com/yourname/s2ibispy"

[project.scripts]
s2ibispy = "main:main"
s2ibispy-gui = "s2ibispy_gui:S2IBISpyGUI.__init__"