[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2ibispy"
version = "0.0.0"
description = "SPICE → IBIS conversion toolkit (refactored)"
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
  "jinja2",
  "matplotlib",
  "pydantic",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"s2ibispy" = [
  "templates/*.j2",
  "data/*",
]
